fix: uneven gaps between caption and picker of DateSelector component

--- a/src/components/layout/PaymentsSection/styles.module.scss
+++ b/src/components/layout/PaymentsSection/styles.module.scss
@@ -13,10 +13,6 @@
       font-size: abstracts.$variables-font-lg;
     }
 
-    .ant-picker {
-      width: 100%;
-    }
-
     .ant-btn {
       width: 100%;
       font-weight: 500;
