--- a/src/components/ui/DateSelector/styles.module.scss
+++ b/src/components/ui/DateSelector/styles.module.scss
@@ -3,10 +3,23 @@
 
 .dateSelector {
   display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 15px;
+  column-gap: 15px;
+  row-gap: 8px;
   align-items: center;
-  width: 100%;
+
+  @include abstracts.mixins-respond(md) {
+    grid-template-columns: auto 1fr;
+  }
+
+  :global {
+    .ant-space-compact {
+      width: 100%;
+    }
+
+    .ant-picker {
+      width: 100%;
+    }
+  }
 }
 
 .iconBlock {
